--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
+     "start": "node src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
